--- a/setup.cfg
+++ b/setup.cfg
@@ -30,3 +30,11 @@ install_requires =
     Django>=3.2
 packages = find:
 python_requires = >=3.8
+
+[coverage:run]
+source = kikeou
+
+[coverage:report]
+fail_under = 100
+show_missing = True
+skip_covered = True
